--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -15,6 +15,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AditivosAlimentarios"
         tools:targetApi="31">
+        <activity
+            android:name=".DetailsActivity"
+            android:exported="false"
+            android:theme="@style/Theme.AditivosAlimentarios" />
         <activity
             android:name=".MainActivity"
             android:exported="true"
